objects/RecordShareConfig__mdt/RecordShareConfig__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is used to store public group values for setup CCM sharing rules for Patient, Caregiver and Sites.</description>
    <label>Record Share Config</label>
    <pluralLabel>Record Share Configs</pluralLabel>
</CustomObject>