objects/RecordShareConfig__mdt/fields/AccessLevel__c.field-meta.xml
<CustomField>
    <fullName>AccessLevel__c</fullName>
    <description>Access Level for the current public group.</description>
    <label>Access Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>