objects/RecordShareConfig__mdt/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>Group name for the current public group.</description>
    <label>Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>