objects/RecordShareConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to activate/deactivate the publc group custom metadata.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>