objects/RecordShareConfig__mdt/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product name for the current public group.</description>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>